--- a/Desktop/week-4-game/index.html
+++ b/Desktop/week-4-game/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Classic Cocktail Hangman</title>
+  <title>TV Toddler Cage Match</title>
 
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
